@@ -4,6 +4,7 @@ import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.ArgumentsProvider;
 
+import static java.util.Collections.emptyList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -16,144 +17,158 @@ import static uk.gov.hmcts.probate.dmn.initiation.CamundaTaskWaInitiationBaseTes
 import static uk.gov.hmcts.probate.dmn.initiation.CamundaTaskWaInitiationBaseTest.literaryEstateHandOffReason;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.BO_RESOLVE_STOP_EVENT;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.CHANGE_STATE_EVENT;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_LITERARY_ESTATE_CASE_PRINTED;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_LITERARY_ESTATE;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_LITERARY_ESTATE_TASK_TYPE_NAME;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.HANDLE_EVIDENCE_EVENT;
-import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.READY_TO_ISSUE_STATE;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.CASE_PRINTED_STATE;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.RESOLVE_SME_REFERRAL_EVENT;
+
 
 public class CamundaTaskWaInitiationLiteraryEstateTestProvider implements ArgumentsProvider {
 
     @Override
     public Stream<? extends Arguments> provideArguments(ExtensionContext context) {
 
-        Map<String,Object> examineLiteraryEstateTaskAttributes = Map.of(
-                "taskId", EXAMINE_LITERARY_ESTATE,
+        Map<String,Object> examineLiteraryEstateCasePrintedTaskAttributes = Map.of(
+                "taskId", EXAMINE_LITERARY_ESTATE_CASE_PRINTED,
                 "name", EXAMINE_LITERARY_ESTATE_TASK_TYPE_NAME,
                 "processCategories", "case progression"
         );
 
         return Stream.of(
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(literaryEstateHandOffReason)),
-                    List.of(examineLiteraryEstateTaskAttributes)
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",false,
-                            handOffReasonListWithHandOffReason(literaryEstateHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    CHANGE_STATE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(literaryEstateHandOffReason)),
-                    List.of(examineLiteraryEstateTaskAttributes)
-            ),
-            Arguments.of(
-                    CHANGE_STATE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",false,
-                            handOffReasonListWithHandOffReason(literaryEstateHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    CHANGE_STATE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    CHANGE_STATE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    RESOLVE_SME_REFERRAL_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(literaryEstateHandOffReason)),
-                    List.of(examineLiteraryEstateTaskAttributes)
-            ),
-            Arguments.of(
-                    RESOLVE_SME_REFERRAL_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",false,
-                            handOffReasonListWithHandOffReason(literaryEstateHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    RESOLVE_SME_REFERRAL_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    RESOLVE_SME_REFERRAL_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    BO_RESOLVE_STOP_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(literaryEstateHandOffReason)),
-                    List.of(examineLiteraryEstateTaskAttributes)
-            ),
-            Arguments.of(
-                    BO_RESOLVE_STOP_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",false,
-                            handOffReasonListWithHandOffReason(literaryEstateHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    BO_RESOLVE_STOP_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    BO_RESOLVE_STOP_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    null,
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalDataNoHandOffList(),
-                    Collections.emptyList()
-            )
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(literaryEstateHandOffReason), false),
+                        List.of(examineLiteraryEstateCasePrintedTaskAttributes)
+                ),
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",false,
+                                handOffReasonListWithHandOffReason(literaryEstateHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true, emptyList(), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalDataNoHandOffList(),
+                        emptyList()
+                ),
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        null,
+                        emptyList()
+                ),
+                Arguments.of(
+                        BO_RESOLVE_STOP_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(literaryEstateHandOffReason), false),
+                        List.of(examineLiteraryEstateCasePrintedTaskAttributes)
+                ),
+                Arguments.of(
+                        BO_RESOLVE_STOP_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",false,
+                                handOffReasonListWithHandOffReason(literaryEstateHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        BO_RESOLVE_STOP_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        BO_RESOLVE_STOP_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true, emptyList(), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        BO_RESOLVE_STOP_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalDataNoHandOffList(),
+                        emptyList()
+                ),
+                Arguments.of(
+                        RESOLVE_SME_REFERRAL_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(literaryEstateHandOffReason), false),
+                        List.of(examineLiteraryEstateCasePrintedTaskAttributes)
+                ),
+                Arguments.of(
+                        RESOLVE_SME_REFERRAL_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",false,
+                                handOffReasonListWithHandOffReason(literaryEstateHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        RESOLVE_SME_REFERRAL_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        RESOLVE_SME_REFERRAL_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true, emptyList(), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        CHANGE_STATE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(literaryEstateHandOffReason), false),
+                        List.of(examineLiteraryEstateCasePrintedTaskAttributes)
+                ),
+                Arguments.of(
+                        CHANGE_STATE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",false,
+                                handOffReasonListWithHandOffReason(literaryEstateHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        CHANGE_STATE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        CHANGE_STATE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true, emptyList(), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        CHANGE_STATE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalDataNoHandOffList(),
+                        emptyList()
+                )
         );
     }
 }
